# flext-db-oracle

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CLI_TOOLS_COMPLETE.md  FLEXT_CORE_MIGRATION_APPLIED.md  LOGGING_MIGRATION.md  Makefile  README.md  TODO.md  api-reference.md  architecture-diagram.puml  architecture.md  base.mk  comprehensive_functionality_test.py  configuration.md  conftest.py  coverage.json  custom.mk  custom.mk.rej  deps.txt  development.md  docker-compose.oracle.yml  flext-db-oracle  getting-started.md  history  history.json  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  simple_performance_benchmark.py  testing.md  troubleshooting.md  validation_report.md  {}
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
.serena/memories/: flext-db-oracle-constants-standardization.md
architecture/: adr-002-sqlalchemy-abstraction.md  adr-003-railway-pattern.md  adr-template.md  arc42-01-introduction.md  c4-code.md  c4-components.md  c4-containers.md
docs/: MAINTENANCE_README.md  README.md  TODO.md  adr-001-clean-architecture.md  adr-002-sqlalchemy-abstraction.md  adr-003-railway-pattern.md  adr-template.md  api-reference.md  arc42-01-introduction.md  architecture-diagram.puml  architecture.md  c4-code.md  c4-components.md  c4-containers.md  c4-context.md  configuration.md  development.md  getting-started.md  implementation_status.md  index.md  integration.md  maintenance_config.yaml  maintenance_procedures.md  phase2_implementation_plan.md  quick-start.md  testing.md  testing_plan.md  troubleshooting.md
docs/administration/: README.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  adr-001-clean-architecture.md  adr-002-sqlalchemy-abstraction.md  adr-003-railway-pattern.md  adr-template.md  arc42-01-introduction.md  c4-code.md  c4-components.md  c4-containers.md  c4-context.md
docs/backup-recovery/: README.md
docs/community/: opensource-tools.md  schema-comparators.md
docs/community-tools/: dbatools-powershell-info.txt  netbeans-oracle-examples-info.txt  oracle-cloud-br-examples-info.txt  prometheus-oracle-exporter-info.txt  toad-oracle-scripts-info.txt
docs/configuration/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  implementation-status.md  implementation_status.md  integration.md  maintenance-procedures.md  maintenance-readme.md  phase2-implementation-plan.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/integration/: singer.md
docs/migration-tools/: oracle-database-migrations-info.txt  oracle-postgresql-migration-info.txt
docs/monitoring-tools/: oracle-observability-info.txt
docs/performance/: README.md
docs/reference-schemas/: oracle-audit-vault-samples-info.txt
docs/reports/: maintenance_report_20251010_114933.md
docs/security/: README.md
docs/standards/: python-module-organization.md
docs/tools/: maintenance-scripts.md
docs_backup/administration/: README.md
docs_backup/community/: opensource-tools.md  sql-analyzers.md
docs_backup/standards/: python-module-organization.md
examples/: 04_comprehensive_oracle_usage.py  05_simple_working.py  06_cli.py  07_sqlalchemy2.py  README.md  __init__.py  cli_examples.py  example_04_comprehensive_oracle_usage.py  sqlalchemy2_example.py
guides/: configuration.md  development.md  getting-started.md  implementation-status.md  integration.md  maintenance-procedures.md  maintenance-readme.md  phase2-implementation-plan.md  skill-automation-pattern.md  testing.md  troubleshooting.md
oracle-init/: init.sql
reports/: pytest.xml
scripts/: README.md  docs_maintenance.py  pre-commit-docs
scripts/core/: skill_validate.py
src/: README.md  __init__.py
src/flext_db_oracle/: README.md  __init__.py  __init__.pyi  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _settings.py  api.py  base.py  cli.py  client.py  compatibility.py  config.py  config_types.py  connection.py  constants.py  dispatcher.py  error_handler.py  exceptions.py  facade.py  fields.py  legacy.py  logging_utils.py  metadata.py  mixins.py  models.py  observability.py  operation_tracker.py  oracle_api.py  oracle_cli.py  oracle_config.py  oracle_connection.py  oracle_exceptions.py  oracle_metadata.py  oracle_models.py  oracle_observability.py  oracle_plugins.py  password.py  (+13 more)
src/oracledb_core_shared/: __init__.py
tests/: README.md  __init__.py  __init__.pyi  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  base.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  settings.py  typings.py  utilities.py
tests/e2e/: README.md  __init__.py  test_oracle.py  test_oracle_e2e.py
tests/fixtures/: __init__.py
tests/functional/: test_real_integration.py
tests/helpers/: constants.py
tests/integration/: README.md  __init__.py  test_oracle.py  test_oracle_integration.py
tests/unit/: README.md  __init__.py  conftest.py  exceptions.py  test_api.py  test_api_comprehensive.py  test_api_coverage_boost.py  test_api_coverage_targeted.py  test_api_missing_coverage.py  test_api_module.py  test_api_real_execution.py  test_api_safe.py  test_api_safe_comprehensive.py  test_api_safe_methods.py  test_api_simple_coverage.py  test_api_surgical_simple.py  test_api_working.py  test_application_services.py  test_cli.py  test_cli_comprehensive.py  test_cli_coverage_boost.py  test_cli_coverage_targeted.py  test_cli_main.py  test_cli_main_fixed.py  test_cli_safe_methods.py  test_cli_service_comprehensive.py  test_cli_simple.py  test_cli_targeted.py  test_client.py  test_client_comprehensive.py  test_client_module.py  test_comparator.py  test_comprehensive_coverage.py  test_comprehensive_functionality.py  test_config.py  test_conftest_constants.py  test_connection.py  test_connection_comprehensive.py  test_connection_comprehensive_coverage.py  test_connection_coverage_boost.py  (+66 more)
typings/examples/: __init__.pyi  cli_examples.pyi  (+2 more)
(+90 files in other folders)
