[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-db-oracle"
version = "0.9.0"
description = "Modern Oracle Database Integration using SQLAlchemy 2 + oracledb"
readme = "README.md"
requires-python = ">=3.13,<3.14"
keywords = ["flext", "enterprise", "async", "typed", "integration", "adapter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings (>=2.10.1)",
    "flext-observability @ file:///home/marlonsc/flext/flext-observability",
    "flext-plugin @ file:///home/marlonsc/flext/flext-plugin",
    "flext-cli @ file:///home/marlonsc/flext/flext-cli",  # CLI UTILITIES LIBRARY - provides CLI tools and helpers
    "flext-core @ file:///home/marlonsc/flext/flext-core",
    "oracledb (>=3.2.0)",
    "pydantic (>=2.11.7)",
    "sqlalchemy (>=2.0.0)",
]
[[project.authors]]
name = "FLEXT Team"
email = "team@flext.sh"

[[project.maintainers]]
name = "FLEXT Team"
email = "team@flext.sh"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
flext-db-oracle = "flext_db_oracle.cli:main"
flext-oracle-migrate = "flext_db_oracle.migrate:main"
flext-oracle = "flext_db_oracle.cli:main"

[tool.ruff]
extend = "../.ruff-shared.toml"
lint.isort.known-first-party = ["flext_db_oracle"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
ignore_missing_imports = false
no_implicit_reexport = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601", "B608"]

[tool.pydantic-mypy]
# Pydantic plugin strict configuration
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.poetry]
[[tool.poetry.packages]]
include = "flext_db_oracle"
from = "src"

[tool.deptry]
known_first_party = ["flext_db_oracle"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--maxfail=1",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "benchmark: Performance benchmark tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[tool.poetry.dependencies.flext-core]
path = "../flext-core"
develop = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.3"
black = ">=25.1.0"
isort = ">=6.0.1"
mypy = ">=1.13.0"
pre-commit = ">=4.0.1"
vulture = ">=2.13"
radon = ">=6.0.1"
codespell = ">=2.3.0"
pyupgrade = ">=3.19.0"
autoflake = ">=2.3.1"
detect-secrets = ">=1.4.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.0"
pytest-asyncio = ">=0.23.5.post1,<0.24.0"
pytest-cov = ">=6.2.0"
pytest-xdist = ">=3.8.0"
pytest-mock = ">=3.14.0"
pytest-timeout = ">=2.4.0"
pytest-benchmark = ">=5.1.0"
pytest-randomly = ">=3.16.0"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-deadfixtures = ">=2.2.1"
pytest-env = ">=1.1.5"
pytest-httpx = ">=0.35.0"
hypothesis = ">=6.125.0"
factory-boy = ">=3.3.1"
faker = ">=37.4.0"

[tool.poetry.group.typings.dependencies]
types-python-dateutil = ">=2.9.0"
types-pyyaml = ">=6.0.12"
types-setuptools = ">=80.9.0"
types-toml = ">=0.10.8.20240310"
types-requests = ">=2.32.4"
types-redis = ">=4.6.0"
types-psutil = ">=7.0.0"

[tool.poetry.group.security.dependencies]
bandit = ">=1.8.0"
pip-audit = ">=2.7.3"
