[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "flext-cli @ file:///home/marlonsc/flext/flext-cli",
        "flext-core @ file:///home/marlonsc/flext/flext-core",
        "oracledb (>=3.2.0)",
        "pydantic (>=2.11.7)",
        "pydantic-settings (>=2.10.1)",
        "referencing (>=0.36.2)",
        "sqlalchemy (>=2.0.0)",
        "structlog (>=25.4.0)",
        "termcolor (>=3.1.0)",
    ]
    description = "Modern Oracle Database Integration using SQLAlchemy 2 + oracledb"
    keywords = [
        "",
        "adapter",
        "enterprise",
        "flext",
        "integration",
        "typed",
    ]
    name = "flext-db-oracle"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.scripts]
        flext-db-oracle      = "flext_db_oracle.cli:main"
        flext-oracle         = "flext_db_oracle.cli:main"
        flext-oracle-migrate = "flext_db_oracle.migrate:main"

[tool.bandit]
    exclude_dirs = [
        "build",
        "dist",
        "tests",
    ]
    skips = [
        "B101",
        "B601",
        "B608",
    ]

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_db_oracle"

[tool.deptry]
    known_first_party = [
        "flext_db_oracle",
    ]

    [tool.poetry.dependencies]
        python = ">=3.13,<3.14"

[tool.pytest.ini_options]
    addopts = [
        "--maxfail=1",
        "--strict-config",
        "--strict-markers",
        "--tb=short",
        "-ra",
    ]
    markers = [
        "benchmark: Performance benchmark tests",
        "complexity: Complexity analysis tests",
        "concurrency: Concurrency tests from flext_tests",
        "e2e: End-to-end tests",
        "integration: Integration tests",
        "memory: Memory usage tests",
        "memory_limit: Memory limit tests",
        "performance: Performance tests",
        "race_condition: Race condition tests",
        "regression: Regression tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "timeout: Timeout tests",
        "unit: Unit tests",
    ]
    minversion = "8.0"
    testpaths = [
        "tests",
    ]

[tool.coverage.run]
    branch = true
    omit = [
        "*/.venv/*",
        "*/__pycache__/*",
        "*/test_*",
        "*/tests/*",
        "*/venv/*",
    ]
    source = [
        "src",
    ]

[tool.coverage.report]
    exclude_lines = [
        "@(abc\\.)?abstractmethod",
        "class .*\\bProtocol\\):",
        "def __repr__",
        "if 0:",
        "if __name__ == .__main__.:",
        "if self.debug:",
        "if settings.DEBUG",
        "pragma: no cover",
        "raise AssertionError",
        "raise NotImplementedError",
    ]

    [tool.poetry.group.dev.dependencies]
        autoflake      = ">=2.3.1"
        black          = ">=25.1.0"
        codespell      = ">=2.3.0"
        detect-secrets = ">=1.4.0"
        isort          = ">=6.0.1"
        pre-commit     = ">=4.0.1"
        pyrefly        = "^0.34.0"
        pyupgrade      = ">=3.19.0"
        radon          = ">=6.0.1"
        ruff           = ">=0.12.3"
        vulture        = ">=2.13"

    [tool.poetry.group.test.dependencies]
        factory-boy         = ">=3.3.1"
        faker               = ">=37.4.0"
        hypothesis          = ">=6.125.0"
        pytest              = ">=8.4.0"
        pytest-benchmark    = ">=5.1.0"
        pytest-clarity      = ">=1.0.1"
        pytest-cov          = ">=6.2.0"
        pytest-deadfixtures = ">=2.2.1"
        pytest-env          = ">=1.1.5"
        pytest-mock         = ">=3.14.0"
        pytest-randomly     = ">=3.16.0"
        pytest-sugar        = ">=1.0.0"
        pytest-timeout      = ">=2.4.0"
        pytest-xdist        = ">=3.8.0"

    [tool.poetry.group.typings.dependencies]
        types-psutil          = ">=7.0.0"
        types-python-dateutil = ">=2.9.0"
        types-pyyaml          = ">=6.0.12"
        types-redis           = ">=4.6.0"
        types-requests        = ">=2.32.4"
        types-setuptools      = ">=80.9.0"
        types-toml            = ">=0.10.8.20240310"

    [tool.poetry.group.security.dependencies]
        bandit    = ">=1.8.0"
        pip-audit = ">=2.7.3"

[tool.pyrefly]
    python-version = "3.13"
    search-path = [
        "examples",
        "scripts",
        "src",
        "tests",
    ]

[tool.ruff]
    extend = "../ruff-shared.toml"

    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_db_oracle",
        ]
